# Otus_BasePython

./: README.md  pip_uninst_libs_and_cache.sh  requirements.txt
homework_08/: README.md  conspect.md  docker-compose.yml  docker-compose_rabbit.yml  pyproject.toml  start_project.sh
homework_08/pro_platform/pro_platform/: settings.py  urls.py
homework_08/pro_platform/shop_projects/: admin.py  forms.py  models.py  urls.py  views.py
homework_08/pro_platform/shop_projects/templates/shop_projects/: category_detail.html  category_list.html  category_update_form.html  creator_detail.html  creator_list.html  creators-with-projects.html  donat_update_form.html  index.html  order_detail.html  order_list.html  (+6 more)
homework_08/pro_platform/shop_projects/views/: creators.py  donats.py  orders.py  projects.py
homework_08/pro_platform/templates/: base.html
lessons/les_28_Flask-SQLAlchemy_Flask-Migrate/: app.db  app.py  config.py  conspect.md  pyproject.toml
lessons/les_28_Flask-SQLAlchemy_Flask-Migrate/models/: database.py
lessons/les_28_Flask-SQLAlchemy_Flask-Migrate/static/css/: buttons.css
lessons/les_28_Flask-SQLAlchemy_Flask-Migrate/static/js/: next-item.js
lessons/les_28_Flask-SQLAlchemy_Flask-Migrate/templates/products/: add.html  confirm-delete.html  details.html  list.html
lessons/les_28_Flask-SQLAlchemy_Flask-Migrate/views/: items.py
lessons/les_28_Flask-SQLAlchemy_Flask-Migrate/views/forms/: products.py
lessons/les_31_Django_ORM_and_toolbar/: pyproject.toml
lessons/les_31_Django_ORM_and_toolbar/pro_platform/pro_platform/: settings.py
lessons/les_31_Django_ORM_and_toolbar/pro_platform/shop_projects/: admin.py  models.py
lessons/les_34_Django_CBV_generics_Forms/: README.md  conspect.md  pyproject.toml
lessons/les_34_Django_CBV_generics_Forms/pro_platform/: docker-compose.yml
lessons/les_34_Django_CBV_generics_Forms/pro_platform/pro_platform/: urls.py
lessons/les_34_Django_CBV_generics_Forms/pro_platform/shop_projects/: admin.py  forms.py  models.py  urls.py  views.py
lessons/les_34_Django_CBV_generics_Forms/pro_platform/templates/: base.html
(+443 files in other folders)
